--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1354,7 +1354,8 @@ section,
 .portfolio .portfolio-item {
   position: relative;
   overflow: hidden;
-}
+  height: auto;
+  }
 
 .portfolio .portfolio-item .portfolio-info {
   opacity: 0;
